--- a/src/app/apps/nav/nav.component.html
+++ b/src/app/apps/nav/nav.component.html
@@ -22,3 +22,29 @@
 <!--    </ng-container>-->
 <!--  </ng-template>-->
 <!--</ul>-->
+<ul style="padding-top: 3px" nz-menu nzMode="inline">
+  <li nz-submenu nzOpen nzTitle="subnav 1" nzIcon="user">
+    <ul>
+      <li nz-menu-item nzSelected>option1</li>
+      <li nz-menu-item>option2</li>
+      <li nz-menu-item>option3</li>
+      <li nz-menu-item>option4</li>
+    </ul>
+  </li>
+  <li nz-submenu nzTitle="subnav 2" nzIcon="laptop">
+    <ul>
+      <li nz-menu-item>option5</li>
+      <li nz-menu-item>option6</li>
+      <li nz-menu-item>option7</li>
+      <li nz-menu-item>option8</li>
+    </ul>
+  </li>
+  <li nz-submenu nzTitle="subnav 3" nzIcon="notification">
+    <ul>
+      <li nz-menu-item>option9</li>
+      <li nz-menu-item>option10</li>
+      <li nz-menu-item>option11</li>
+      <li nz-menu-item>option12</li>
+    </ul>
+  </li>
+</ul>
