--- a/src/app/orgs/users/users.component.html
+++ b/src/app/orgs/users/users.component.html
@@ -1,6 +1,6 @@
 <nz-layout class="nested">
   <nz-sider nzTheme="light" [nzWidth]="300">
-    <wpx-admin-departments [(id)]="departmentId" (idChange)="selectedDepartment()"></wpx-admin-departments>
+    <app-orgs-departments [(id)]="departmentId" (idChange)="selectedDepartment()"></app-orgs-departments>
   </nz-sider>
   <nz-layout style="overflow: auto">
     <nz-content>
