--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~ng-zorro-antd/ng-zorro-antd.compact.min.css';
-@import 'node_modules/ng-zorro-antd/code-editor/style';
-@import 'node_modules/ng-zorro-antd/resizable/style';
+@import 'https://cdn.kainonly.com/assets/ng-zorro-antd/ng-zorro-antd.compact.min.css';
+@import 'https://cdn.kainonly.com/assets/ng-zorro-antd/code-editor/index.min.css';
+@import 'https://cdn.kainonly.com/assets/ng-zorro-antd/resizable/index.min.css';
 
 nz-layout.main {
   height: 100%;
