--- a/src/app/common/toolbar/toolbar.component.html
+++ b/src/app/common/toolbar/toolbar.component.html
@@ -16,6 +16,9 @@
     <li nz-menu-item nzMatchRouter [routerLink]="['/security']" nz-tooltip="安全性" nzTooltipPlacement="right">
       <span nz-icon nzType="safety"></span>
     </li>
+    <li nz-menu-item nzMatchRouter [routerLink]="['/monitor']" nz-tooltip="监控" nzTooltipPlacement="right">
+      <span nz-icon nzType="line-chart"></span>
+    </li>
     <li nz-menu-item nzMatchRouter [routerLink]="['/developer']" nz-tooltip="开发者" nzTooltipPlacement="right">
       <i nz-icon nzType="code"></i>
     </li>
