--- a/src/app/developer/collector/collector.component.html
+++ b/src/app/developer/collector/collector.component.html
@@ -1,11 +1,11 @@
-<ng-template #extra>
+<ng-template #actions>
   <nz-space>
     <button *nzSpaceItem nz-button nzType="primary"> 新增 </button>
   </nz-space>
 </ng-template>
 
-<wpx-admin-toolbox-tabs [extra]="extra">
+<nz-card [nzExtra]="actions">
   <nz-list nzSize="large" nzItemLayout="vertical">
     <nz-list-empty *ngIf="items.length === 0"></nz-list-empty>
   </nz-list>
-</wpx-admin-toolbox-tabs>
+</nz-card>
