--- a/src/app/developer/values/values.component.html
+++ b/src/app/developer/values/values.component.html
@@ -1,26 +1,33 @@
-<ng-template #extra>
+<ng-template #searchRef>
+  <nz-space>
+    <nz-input-group *nzSpaceItem style="width: 180px" nzSuffixIcon="search">
+      <input [(ngModel)]="searchText" (keyup.enter)="getData()" type="text" nz-input placeholder="配置键名" />
+    </nz-input-group>
+    <nz-button-group *nzSpaceItem>
+      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+        <i nz-icon nzType="reload"></i>
+      </button>
+      <button nz-button nzType="text" nz-tooltip="重置" (click)="clearSearch()">
+        <i nz-icon nzType="clear"></i>
+      </button>
+    </nz-button-group>
+  </nz-space>
+</ng-template>
+
+<ng-template #actions>
   <nz-space>
     <button *nzSpaceItem nz-button nzType="primary" (click)="form()"> 新增 </button>
   </nz-space>
 </ng-template>
 
-<wpx-admin-toolbox-tabs [extra]="extra">
-  <nz-dropdown-menu #searchRef="nzDropdownMenu">
-    <div class="ant-table-filter-dropdown">
-      <div class="search-box">
-        <input type="text" nz-input placeholder="配置键名" [(ngModel)]="searchValue" />
-        <button nz-button nzSize="small" nzType="primary" class="search-button" (click)="getData()">搜索</button>
-        <button nz-button nzSize="small" (click)="reset()">重置</button>
-      </div>
-    </div>
-  </nz-dropdown-menu>
+<nz-card [nzTitle]="searchRef" [nzExtra]="actions">
   <nz-table #basicTable [nzData]="values" [nzHideOnSinglePage]="true" [nzPageSize]="20">
     <thead>
       <tr>
         <th nzWidth="36px" nzLeft nzAlign="center"> </th>
         <th nzWidth="300px" nzCustomFilter>
           <b>键名</b>
-          <nz-filter-trigger [(nzVisible)]="searchVisible" [nzDropdownMenu]="searchRef">
+          <nz-filter-trigger [(nzVisible)]="searchVisible">
             <i nz-icon nzType="search"></i>
           </nz-filter-trigger>
         </th>
@@ -47,4 +54,4 @@
       </tr>
     </tbody>
   </nz-table>
-</wpx-admin-toolbox-tabs>
+</nz-card>
