--- a/src/app/common/toolbar/toolbar.component.scss
+++ b/src/app/common/toolbar/toolbar.component.scss
@@ -24,14 +24,9 @@
     }
   }
 
-  .extra {
+  .setting {
     position: absolute;
     bottom: 0;
     width: 100%;
-
-    button {
-      color: #fff;
-      height: 45px;
-    }
   }
 }
