--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -1,7 +1,26 @@
 <nz-layout class="main">
   <app-toolbar></app-toolbar>
   <nz-layout>
-    <app-header>
+    <ng-template #breadcrumb>
+      <!--      <nz-breadcrumb>-->
+      <!--        <ng-container *ngIf="!wpx.manual">-->
+      <!--          <nz-breadcrumb-item>-->
+      <!--            <a [routerLink]="['/pages']"><span nz-icon nzType="home"></span> 首页</a>-->
+      <!--          </nz-breadcrumb-item>-->
+      <!--          <ng-container *ngIf="wpx.pageId | async as current">-->
+      <!--            <ng-container *ngFor="let page of current | Path | async">-->
+      <!--              <nz-breadcrumb-item>-->
+      <!--                <ng-container *ngIf="page?.kind !== 'group'; else textName">-->
+      <!--                  <a [routerLink]="['/pages', page._id]">{{ page?.name }}</a>-->
+      <!--                </ng-container>-->
+      <!--                <ng-template #textName>{{ page?.name }}</ng-template>-->
+      <!--              </nz-breadcrumb-item>-->
+      <!--            </ng-container>-->
+      <!--          </ng-container>-->
+      <!--        </ng-container>-->
+      <!--      </nz-breadcrumb>-->
+    </ng-template>
+    <app-header [breadcrumb]="breadcrumb">
       <ul nz-menu nzMode="horizontal">
         <li nz-menu-item nzSelected>
           <span nz-icon nzType="edit"></span>
