--- a/src/app/common/toolbar/toolbar.component.html
+++ b/src/app/common/toolbar/toolbar.component.html
@@ -1,8 +1,8 @@
 <div class="toolbar">
   <div class="logo"></div>
   <ul nz-menu nzMode="vertical" nzTheme="dark">
-    <li nz-menu-item nzMatchRouter [routerLink]="['/work']" nz-tooltip="工作" nzTooltipPlacement="right">
-      <span nz-icon nzType="desktop"></span>
+    <li nz-menu-item nzMatchRouter [routerLink]="['/dashboard']" nz-tooltip="仪表盘" nzTooltipPlacement="right">
+      <span nz-icon nzType="dashboard"></span>
     </li>
     <li nz-menu-item nzMatchRouter [routerLink]="['/apps']" nz-tooltip="内容" nzTooltipPlacement="right">
       <span nz-icon nzType="layout"></span>
