--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -15,24 +15,6 @@
         <ng-container *nzSpaceItem>
           <ng-container *ngTemplateOutlet="breadcrumb"></ng-container>
         </ng-container>
-
-        <!--        <nz-breadcrumb *nzSpaceItem [nzAutoGenerate]="wpx.manual">-->
-        <!--          <ng-container *ngIf="!wpx.manual">-->
-        <!--            <nz-breadcrumb-item>-->
-        <!--              <a [routerLink]="['/pages']"><span nz-icon nzType="home"></span> 首页</a>-->
-        <!--            </nz-breadcrumb-item>-->
-        <!--            <ng-container *ngIf="wpx.pageId | async as current">-->
-        <!--              <ng-container *ngFor="let page of current | Path | async">-->
-        <!--                <nz-breadcrumb-item>-->
-        <!--                  <ng-container *ngIf="page?.kind !== 'group'; else textName">-->
-        <!--                    <a [routerLink]="['/pages', page._id]">{{ page?.name }}</a>-->
-        <!--                  </ng-container>-->
-        <!--                  <ng-template #textName>{{ page?.name }}</ng-template>-->
-        <!--                </nz-breadcrumb-item>-->
-        <!--              </ng-container>-->
-        <!--            </ng-container>-->
-        <!--          </ng-container>-->
-        <!--        </nz-breadcrumb>-->
       </nz-space>
     </nz-col>
     <nz-col>
@@ -67,7 +49,7 @@
             <nz-tabset style="width: 360px" [nzTabBarExtraContent]="actions">
               <ng-template #actions>
                 <nz-space>
-                  <button *nzSpaceItem [routerLink]="['/center']" nz-button nzType="text" nz-tooltip="个人中心">
+                  <button *nzSpaceItem nz-button nzType="text" nz-tooltip="个人中心">
                     <i nz-icon nzType="user"></i>
                   </button>
                   <button *nzSpaceItem nz-button nzType="text" nz-tooltip="退出" (click)="logout()">
