--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,8 @@ nz-layout.main {
 nz-layout.frame {
   padding-top: 44px;
   padding-left: 51px;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   nz-sider {
     overflow: auto;
