--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -36,7 +36,7 @@
         </li>
       </ul>
     </app-header>
-    <nz-layout class="frame">
+    <nz-layout class="frame" style="overflow: hidden">
       <nz-sider nzTheme="light">
         <app-apps-nav></app-apps-nav>
       </nz-sider>
