--- a/src/app/dashboard/analysis/analysis.component.html
+++ b/src/app/dashboard/analysis/analysis.component.html
@@ -1,4 +1,4 @@
-<div class="analysis" nz-row [nzGutter]="[8, 8]">
+<div nz-row [nzGutter]="[8, 8]">
   <div nz-col [nzSpan]="9">
     <nz-card style="height: 345px">
       <div nz-row [nzGutter]="[16, 8]">
