--- a/src/app/center/work/work.component.scss
+++ b/src/app/center/work/work.component.scss
@@ -1,16 +1,5 @@
-.user {
-  padding: 16px;
-  text-align: center;
-  nz-avatar:hover {
-    cursor: pointer;
-  }
-  h2 {
-    margin: 16px 0 8px;
-  }
-}
-
-.details {
-  padding: 12px 16px 0;
+.avatar {
+  padding: 16px 16px 32px;
 }
 
 .project {
