--- a/src/app/common/toolbar/toolbar.component.html
+++ b/src/app/common/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
     <li nz-menu-item nzMatchRouter [routerLink]="['/dashboard']" nz-tooltip="仪表盘" nzTooltipPlacement="right">
       <span nz-icon nzType="dashboard"></span>
     </li>
-    <li nz-menu-item nzMatchRouter [routerLink]="['/apps']" nz-tooltip="内容" nzTooltipPlacement="right">
+    <li nz-menu-item nzMatchRouter [routerLink]="['/apps']" nz-tooltip="内容生成器" nzTooltipPlacement="right">
       <span nz-icon nzType="layout"></span>
     </li>
     <li nz-menu-item nzMatchRouter [routerLink]="['/media']" nz-tooltip="媒体" nzTooltipPlacement="right">
