--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -8,7 +8,7 @@
 
         <button *nzSpaceItem nz-button nzType="text">
           <span nz-icon nzType="appstore"></span>
-          默认应用
+          默认项目
           <span nz-icon nzType="caret-down"></span>
         </button>
 
