--- a/src/app/factory/factory.component.html
+++ b/src/app/factory/factory.component.html
@@ -23,18 +23,18 @@
     <app-header [breadcrumb]="breadcrumb">
       <ul nz-menu nzMode="horizontal">
         <li nz-menu-item nzSelected>
-          <span nz-icon nzType="edit"></span>
+          <span nz-icon nzType="ant-design"></span>
           设计
         </li>
         <li nz-menu-item>
-          <span nz-icon nzType="thunderbolt"></span>
+          <span nz-icon nzType="desktop"></span>
           预览
         </li>
       </ul>
     </app-header>
     <nz-layout class="frame" style="overflow: hidden">
       <nz-sider nzTheme="light">
-        <app-apps-nav></app-apps-nav>
+        <app-factory-nav></app-factory-nav>
       </nz-sider>
       <nz-layout style="overflow: auto">
         <nz-content>
