--- a/src/app/common/projects/projects.component.html
+++ b/src/app/common/projects/projects.component.html
@@ -1,6 +1,6 @@
 <button nz-button nzType="text" (click)="open()">
   <span nz-icon nzType="appstore"></span>
-  默认项目
+  {{ app.project.name }}
 </button>
 
 <ng-template #title>
