--- a/src/app/namespace/namespace.component.html
+++ b/src/app/namespace/namespace.component.html
@@ -11,22 +11,22 @@
 
     <app-header [breadcrumb]="breadcrumbTpl">
       <ul nz-menu nzMode="horizontal">
-        <li nz-menu-item nzMatchRouter [routerLink]="['/', app.project.namespace, 'dashboard', 'cloud']">
+        <li nz-menu-item nzMatchRouter [routerLink]="['/', app.project.namespace, 'overview', 'cloud']">
           <span nz-icon nzType="cloud"></span>
           云平台
         </li>
-        <li nz-menu-item nzMatchRouter [routerLink]="['/', app.project.namespace, 'dashboard', 'office']">
+        <li nz-menu-item nzMatchRouter [routerLink]="['/', app.project.namespace, 'overview', 'office']">
           <span nz-icon nzType="coffee"></span>
           企业办公
         </li>
-        <li nz-menu-item nzMatchRouter [routerLink]="['/', app.project.namespace, 'dashboard', 'email']">
-          <span nz-icon nzType="mail"></span>
-          电子邮件
-        </li>
-        <li nz-menu-item nzMatchRouter [routerLink]="['/', app.project.namespace, 'dashboard', 'openapi']">
-          <span nz-icon nzType="gateway"></span>
-          开放服务
-        </li>
+        <!--        <li nz-menu-item nzMatchRouter [routerLink]="['/', app.project.namespace, 'overview', 'email']">-->
+        <!--          <span nz-icon nzType="mail"></span>-->
+        <!--          电子邮件-->
+        <!--        </li>-->
+        <!--        <li nz-menu-item nzMatchRouter [routerLink]="['/', app.project.namespace, 'overview', 'openapi']">-->
+        <!--          <span nz-icon nzType="gateway"></span>-->
+        <!--          开放服务-->
+        <!--        </li>-->
       </ul>
     </app-header>
     <nz-layout class="frame">
