--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,15 +11,6 @@ nz-layout.main {
   background-size: 100%;
 }
 
-nz-layout.frame {
-  padding-top: 44px;
-  padding-left: 51px;
-  overflow-x: hidden;
-  overflow-y: auto;
-
-  nz-sider {
-    overflow: auto;
-    height: 100%;
-    border-right: 1px solid #f0f0f0;
-  }
+.content {
+  padding: 8px;
 }
