--- a/src/app/common/toolbar/toolbar.component.html
+++ b/src/app/common/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
     <li
       nz-menu-item
       nzMatchRouter
-      [routerLink]="['/', app.project.namespace, 'dashboard']"
+      [routerLink]="['/', app.project.namespace, 'overview']"
       nz-tooltip="仪表盘"
       nzTooltipPlacement="right"
     >
